# RideMetricX

./: .gitignore  .metadata  README.md  pubspec.yaml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: flutter.yml  pr-issue-link-check.yml
android/app/: build.gradle
assets/data/: front_imu_sample.csv  rear_imu_sample.csv
docs/: ARCHITECTURE.md  benchmarks.md
docs/requirements/: 01-data-collection.md  02-data-import.md  03-suspension-model.md  04-visualization.md  05-ui-tuning.md  06-web-platform.md
ios/Runner/: GeneratedPluginRegistrant.h  GeneratedPluginRegistrant.m  Info.plist
lib/: app_shell.dart  main.dart
lib/models/: analysis_metrics.dart  damping_clicks_config.dart  damping_config.dart  damping_force_result.dart  front_geometry_config.dart  front_suspension_config.dart  imu_sample.dart  linkage_config.dart  motorcycle_config.dart  preprocessing_config.dart  processed_sample.dart  quality_score.dart  rear_geometry_config.dart  rear_suspension_config.dart  recommendation.dart  ride_session.dart  rider_config.dart  sag_result.dart  session_metadata.dart  simulation_result.dart  spring_config.dart  (+12 more)
test/: app_shell_test.dart  sessions_screen_test.dart  widget_test.dart  windows_build_test.dart
tool/: README.md  generate_imu_data.py
web/: flutter_bootstrap.js  index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  main.cpp  resource.h  runner.exe.manifest  utils.cpp  utils.h  win32_window.cpp  win32_window.h
(+99 files in other folders)
